alignment is fixed when button is included in the announcement bar

--- a/sass/components/_announcement-bar.scss
+++ b/sass/components/_announcement-bar.scss
@@ -32,6 +32,12 @@
             line-height: 20px;
             text-overflow: ellipsis;
 
+            .announcement-bar__configuration {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
             &::after {
                 display: block;
                 content: '';
